# GRandLine

./: .gitignore  Cargo.toml  README.md  Updated Quick Start guide  cms_4_1.txt  cms_5_1.txt  cms_6_2.txt  cms_8_3.txt  config_4_1.txt  config_5_1.txt  config_6_2.txt  config_8_3.txt  ips.txt  ips_6_2.txt  ips_8_3.txt  pks_4_1.txt  pks_5_1.txt  pks_6_2.txt  pks_8_3.txt  sks_4_1.txt  sks_5_1.txt  sks_6_2.txt  sks_8_3.txt
configs/: 16_7cfg  16_7cms  16_7pks  16_7sks  32_15cfg  32_15cms  32_15pks  32_15sks  4_1cfg  4_1cms  4_1pks  4_1sks  64_31cfg  64_31cms  64_31pks  64_31sks  8_3cfg  8_3cms  8_3pks  8_3sks  cms_4_1  cms_8_3  config_4_1  config_8_3  pks_4_1  pks_8_3  sks_4_1  sks_8_3
plots/: throughput.sage
results/n=16/: performance
results/n=32/: performance
results/n=4/: performance
results/n=64/: performance
results/n=8/: performance
scripts/: generate_config.sh  local_run.py  local_run.sh  parse.py
scripts/aws/: deploy.py  do_setup.sh  do_test.sh  ips  parse.py  setup.sh  test.sh
src/: config.rs  core.rs  main.rs  message.rs  node.rs
src/config/: config.rs  main.rs  mod.rs
src/network/: mod.rs  receiver.rs  retransmitter.rs  sender.rs
