[package]
name = "grandline"
version = "0.1.0"
author = "Dimitris Papachristoudis"
edition = "2021"

[dependencies]
optrand_pvss = {git="https://github.com/DimitrisPapac/Optrand-PVSS.git"}
async-recursion = "1.0.5"
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.6", features = ["codec"] }
futures = "0.3.14"
bytes = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha3 = "0.10.8"
rand = "0.7.3"
ark-bls12-381 = { version = "^0.2.0", features = [ "std" ] }
ark-ec = { version = "^0.2.0", features = [ "std" ] }
ark-ff = { version = "^0.2.0", features = [ "std" ] }
ark-poly = { version = "^0.2.0", features = [ "std" ] }
ark-serialize = { version = "^0.2.0", features = [ "std" ] }
ark-std = { version = "^0.2.0", features = [ "std" ] }
clap = { version = "4.4.10", features = ["derive"] }

[[bin]]
name = "generator"
path = "src/config/main.rs"

[[bin]]
name = "app"
path = "src/main.rs"